# quant_toolkit

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
examples/: __init__.py  black_scholes_pricing.py  chart_gallery.py  factor_analysis.py  fama_french_data.py  regime_detection.py  style_analysis.py
quant_toolkit/: __init__.py  plotly_payload.py  returns.py
quant_toolkit/analysis/: __init__.py  benchmark_style.py  black_scholes.py  style_storage.py
quant_toolkit/data/: french_industry.py
quant_toolkit/universe/: __init__.py  loader.py
tests/: test_black_scholes.py  test_charts.py  test_factor_analysis.py  test_factor_charts.py  test_kalman_filter.py  test_plotly_payload.py  test_regime_detection.py  test_returns.py  test_risk_charts.py  test_risk_model.py  test_style_analysis.py  test_style_storage.py
toolkit/: __init__.py  charts.py  factor_charts.py  plotly_payload.py  regime_charts.py  risk_charts.py
toolkit/analysis/: __init__.py  benchmark_style.py  factor_analysis.py  factor_storage.py  kalman_filter.py  regime_detection.py  regime_storage.py  risk_model.py  risk_storage.py  transforms.py
toolkit/data/: __init__.py  fred.py  french_industry.py
toolkit/universe/: loader.py
